feat: add itemstack handling and new read function